# learning-rag

./: .gitignore  README.md  deep-research-report.md  docker-compose.yml
.github/workflows/: ci.yml  codeql.yml  llm-generation-security.yml  llm-security.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_documents_chunks.py  0002_add_auth_workspaces.py  0003_add_audit_logs.py  0004_add_audit_composite_index.py  0005_add_document_classification_label.py
backend/app/: audit.py  auth.py  config.py  db.py  embeddings.py  ingestion.py  llm.py  main.py  models.py  observability.py  pii.py  rate_limit.py  retrieval.py  schemas.py  sql_models.py  store.py
backend/rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_document_inventory.py  test_ingest_upload.py  test_ingestion.py  test_pii.py  test_query_integration.py  test_query_policy.py  test_rate_limit.py  test_retrieval.py  test_store.py  test_workspace_members.py
data/: ATTRIBUTION.md  golden_queries.md
data/wikipedia_it/: anpr.txt  cad.txt  pagopa.txt  spid.txt
docs/: eval-gates.md  governance.md  llm.md  operations.md  threat-model.md
docs/learning/: 2026_02_03.md  2026_02_04.md
frontend/: package-lock.json  package.json
promptfoo/: rag_policy_eval.yaml
scripts/: check_promptfoo_results.py  launch_backend.sh  launch_backend_tests.sh  launch_edge_proxy.sh  run_garak_scan.sh  run_promptfoo_eval.sh  smoke_edge_rate_limit.sh  smoke_postgres.sh  smoke_query_policy_roles.sh
(+4 files in other folders)
